add a flag on signup that is "not anonymous"
fixes #9. NOTE: requires DB table modification
