# docs/openapi.yaml
@@ -9,6 +9,46 @@ info:
 servers:
 - url: https://auth.l0.mytiki.com
 paths:
+  /api/latest/userinfo:
+    get:
+      tags:
+      - AUTH
+      operationId: get_1
+      parameters:
+      - name: Authorization
+        in: header
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfoAO'
+    post:
+      tags:
+      - AUTH
+      operationId: update
+      parameters:
+      - name: Authorization
+        in: header
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserInfoAOUpdate'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfoAO'
   /api/latest/otp/start:
     post:
       tags:
@@ -102,7 +142,7 @@ paths:
     get:
       tags:
       - AUTH
-      operationId: get_1
+      operationId: get_2
       responses:
         "200":
           description: OK
@@ -114,11 +154,28 @@ paths:
                   type: object
 components:
   schemas:
+    UserInfoAOUpdate:
+      type: object
+      properties:
+        email:
+          type: string
+    UserInfoAO:
+      type: object
+      properties:
+        sub:
+          type: string
+        email:
+          type: string
+        updated_at:
+          type: string
+          format: date-time
     OtpAOStartReq:
       type: object
       properties:
         email:
           type: string
+        notAnonymous:
+          type: boolean
     OtpAOStartRsp:
       type: object
       properties:
